<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Brium</string>
    <string name="settings_title">Settings</string>
    <string name="server_url_label">Brium Server URL</string>
    <string name="server_url_summary">Your local Brium search engine address</string>
    <string name="server_url_hint">http://127.0.0.1:8000</string>
    <string name="default_server_url">http://127.0.0.1:8000</string>
    <string name="url_bar_hint">Search or enter URL</string>
    <string name="nav_back">Back</string>
    <string name="nav_forward">Forward</string>
    <string name="nav_refresh">Refresh</string>
    <string name="nav_settings">Settings</string>
    <string name="retry">Retry</string>
    <string name="change_server">Change Server</string>
    <string name="connection_error">Connection Error</string>
    <string name="save">Save</string>
</resources>
